# Nexus

./: .gitignore  README.md  pyproject.toml  readme.md  worldbox-0.50.6-torrent.json
.github/workflows/: ci.yml  publish.yml  release.yml
.nexus/: mcp_config.json
.nexus/prompts/: system_prompt.md
nexus/: main.py
nexus/agent/: approval.py  graph.py  nodes.py  state.py
nexus/commands/: base.py  core.py  registry.py
nexus/config/: prompts.py  settings.py
nexus/memory/: __init__.py  conversation.py
nexus/tools/: __init__.py  mcp.py  shell.py
nexus/ui/: cli.py
nexus/utils/: __init__.py  logging.py  tracing.py
